code editing is done, the first version of the project is finished

--- a/quiz-demo/mobil/app.json
+++ b/quiz-demo/mobil/app.json
@@ -4,6 +4,7 @@
     "slug": "mobil",
     "version": "1.0.0",
     "orientation": "portrait",
+    "newArchEnabled": false,
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
